objects/PartnerSkipValuesHistory__c.object
<CustomObject>
    <description>This Object for containing audit trails records for Changing  Skip Values History</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field contains account ID</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PartnerSkipValuesHistories</relationshipLabel>
        <relationshipName>PartnerSkipValuesHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewSkipValue__c</fullName>
        <label>NewSkipValue</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldSkipValue__c</fullName>
        <label>OldSkipValue</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PartnerSkipValuesHistory</label>
    <nameField>
        <label>PartnerSkipValuesHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PartnerSkipValuesHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>